Question text alignment issue

--- a/app/styles/controllers/profile/content/_assessments.scss
+++ b/app/styles/controllers/profile/content/_assessments.scss
@@ -118,6 +118,7 @@
             float: left;
             text-align: center;
             margin-top: -5px;
+            margin-left: 2px;
             width: 15px;
           }
         }
